5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4429/executions/1594_1805.log
== TEST (2019-04-12 00:30:12) 
-- CODE:
var1=float("digite a coordenada Xa: ")
var2=float("digite a coordenada Ya: ")
var3=float("digite a coordenada Xb: ")
var4=float("digite a coordenada Yb: ")

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(float(r1,2))
print(float(r2,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1=float("digite a coordenada Xa: ")
ValueError: could not convert string to float: 'digite a coordenada Xa: '
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:31:41) 
-- CODE:
var1=float(input("digite a coordenada Xa: "))
var2=float(input("digite a coordenada Ya: "))
var3=float(input("digite a coordenada Xb: "))
var4=float(input("digite a coordenada Yb: "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(float(r1,2))
print(float(r2,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(float(r1,2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:32:33) 
-- CODE:
var1=float(input("digite a coordenada Xa: "))
var2=float(input("digite a coordenada Ya: "))
var3=float(input("digite a coordenada Xb: "))
var4=float(input("digite a coordenada Yb: "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(float(r1,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(float(r1,2))
TypeError: float() takes at most 1 argument (2 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:33:00) 
-- CODE:
var1=float(input("digite a coordenada Xa: "))
var2=float(input("digite a coordenada Ya: "))
var3=float(input("digite a coordenada Xb: "))
var4=float(input("digite a coordenada Yb: "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(r1,2)

-- OUTPUT:
40.0 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:33:40) 
-- CODE:
var1=float(input("digite a coordenada Xa: "))
var2=float(input("digite a coordenada Ya: "))
var3=float(input("digite a coordenada Xb: "))
var4=float(input("digite a coordenada Yb: "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print round(r1,2)
print round(r2,2)

-- ERROR:
File "XXXX", line 8
    print round(r1,2)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:33:54) 
-- CODE:
var1=float(input("digite a coordenada Xa: "))
var2=float(input("digite a coordenada Ya: "))
var3=float(input("digite a coordenada Xb: "))
var4=float(input("digite a coordenada Yb: "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print (round(r1,2))
print (round(r2,2))

-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 00:34:09) 
-- CODE:
var1=float(input("digite a coordenada Xa: "))
var2=float(input("digite a coordenada Ya: "))
var3=float(input("digite a coordenada Xb: "))
var4=float(input("digite a coordenada Yb: "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print (round(r1,2))
print (round(r2,2))

-- EXECUTION TIME:
0.122577
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:34:36) 
-- CODE:
var1=float(input("digite a coordenada Xa: "))
var2=float(input("digite a coordenada Ya: "))
var3=float(input("digite a coordenada Xb: "))
var4=float(input("digite a coordenada Yb: "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print (round(r1,2))
print (round(r2,2))

-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:34:53) 
-- CODE:
var1=float(input("digite a coordenada Xa: "))
var2=float(input("digite a coordenada Ya: "))
var3=float(input("digite a coordenada Xb: "))
var4=float(input("digite a coordenada Yb: "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 00:35:10) 
-- CODE:
var1=float(input("digite a coordenada Xa: "))
var2=float(input("digite a coordenada Ya: "))
var3=float(input("digite a coordenada Xb: "))
var4=float(input("digite a coordenada Yb: "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- EXECUTION TIME:
0.13139
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 00:35:36) 
-- CODE:
var1=int(input("digite a coordenada Xa: "))
var2=int(input("digite a coordenada Ya: "))
var3=int(input("digite a coordenada Xb: "))
var4=int(input("digite a coordenada Yb: "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- EXECUTION TIME:
0.15079
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:

-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:35:40) 
-- CODE:
var1=int(input("digite a coordenada Xa: "))
var2=int(input("digite a coordenada Ya: "))
var3=int(input("digite a coordenada Xb: "))
var4=int(input("digite a coordenada Yb: "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 00:35:52) 
-- CODE:
var1=int(input("digite a coordenada Xa: "))
var2=int(input("digite a coordenada Ya: "))
var3=int(input("digite a coordenada Xb: "))
var4=int(input("digite a coordenada Yb: "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- EXECUTION TIME:
0.207366
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:

-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:36:28) 
-- CODE:
var1=float(input(" "))
var2=float(input(" "))
var3=float(input(" "))
var4=float(input(" "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 00:36:43) 
-- CODE:
var1=float(input(" "))
var2=float(input(" "))
var3=float(input(" "))
var4=float(input(" "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- EXECUTION TIME:
0.129832
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:36:54) 
-- CODE:
var1=int(input(" "))
var2=float(input(" "))
var3=float(input(" "))
var4=float(input(" "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:37:52) 
-- CODE:
var1=float(round(input(" "),1)
var2=float(input(" "))
var3=float(input(" "))
var4=float(input(" "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- ERROR:
File "XXXX", line 2
    var2=float(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:38:05) 
-- CODE:
var1=float(round(input(" "),1))
var2=float(input(" "))
var3=float(input(" "))
var4=float(input(" "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    var1=float(round(input(),1))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:39:04) 
-- CODE:
var1=float(input(" "))
var2=float(input(" "))
var3=float(input(" "))
var4=float(input(" "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 00:39:34) 
-- CODE:
var1=float(input(" "))
var2=float(input(" "))
var3=float(input(" "))
var4=float(input(" "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- EXECUTION TIME:
0.194306
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:40:03) 
-- CODE:
var1=float(input(" "))
var2=float(input(" "))
var3=float(input(" "))
var4=float(input(" "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,r2,2))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(round(r1,r2,2))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:40:58) 
-- CODE:
var1=float(input(" "))
var2=float(input(" "))
var3=float(input(" "))
var4=float(input(" "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print int(round(r1,2))
print int(round(r2,2))

-- ERROR:
File "XXXX", line 8
    print int(round(r1,2))
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:41:16) 
-- CODE:
var1=float(input(" "))
var2=float(input(" "))
var3=float(input(" "))
var4=float(input(" "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(int(round(r1,2)))
print(int(round(r2,2)))

-- OUTPUT:
40
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 00:42:05) 
-- CODE:
var1=int(input(" "))
var2=int(input(" "))
var3=int(input(" "))
var4=int(input(" "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- EXECUTION TIME:
0.13328
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:

-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:43:39) 
-- CODE:
var1=float(round(input(" ",2))
var2=float(input(" "))
var3=float(input(" "))
var4=float(input(" "))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- ERROR:
File "XXXX", line 2
    var2=float(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:44:09) 
-- CODE:
var1=float(round(input())
var2=float(input())
var3=float(input())
var4=float(input())

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- ERROR:
File "XXXX", line 2
    var2=float(input())
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 00:44:33) 
-- CODE:
var1=float(input(""))
var2=float(input(""))
var3=float(input(""))
var4=float(input(""))

r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- EXECUTION TIME:
0.190107
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:44:54) 
-- CODE:
var1=float(input(""))
var2=float(input(""))
var3=float(input(""))
var4=float(input(""))
r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 00:45:08) 
-- CODE:
var1=float(input(""))
var2=float(input(""))
var3=float(input(""))
var4=float(input(""))
r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- EXECUTION TIME:
0.122227
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:46:17) 
-- CODE:
var1=float(input(""))
var2=float(input(""))
var3=float(input(""))
var4=float(input(""))
r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:46:41) 
-- CODE:
var1=(input(""))
var2=(input(""))
var3=(input(""))
var4=(input(""))
r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    r1=((var1+var3)/2)
TypeError: unsupported operand type(s) for /: 'str' and 'int'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 00:47:11) 
-- CODE:
var1=float(input(""))
var2=float(input(""))
var3=float(input(""))
var4=float(input(""))
r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- EXECUTION TIME:
0.216057
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 00:47:55) 
-- CODE:
var1=float(input(""))
var2=float(input(""))
var3=float(input(""))
var4=float(input(""))
r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- EXECUTION TIME:
0.174972
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 00:48:25) 
-- CODE:
var1=float(input(""))
var2=float(input(""))
var3=float(input(""))
var4=float(input(""))
r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- EXECUTION TIME:
0.151758
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:50:17) 
-- CODE:
var1=float(input(""))
var2=float(input(""))
var3=float(input(""))
var4=float(input(""))
r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:50:30) 
-- CODE:
var1=float(input(""))
var2=float(input(""))
var3=float(input(""))
var4=float(input(""))
r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:50:44) 
-- CODE:
var1=float(input(""))
var2=float(input(""))
var3=float(input(""))
var4=float(input(""))
r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 00:51:18) 
-- CODE:
var1=float(input(""))
var2=float(input(""))
var3=float(input(""))
var4=float(input(""))
r1=((var1+var3)/2)
r2=((var2+var4)/2)
print(round(r1,2))
print(round(r2,2))

-- EXECUTION TIME:
0.157113
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:52:35) 
-- CODE:
var1=float(input(""))
var2=float(input(""))
var3=float(input(""))
var4=float(input(""))
r1=((var3+var1)/2)
r2=((var4+var2)/2)
print(round(r1,2))
print(round(r2,2))

-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 00:52:48) 
-- CODE:
var1=float(input(""))
var2=float(input(""))
var3=float(input(""))
var4=float(input(""))
r1=((var3+var1)/2)
r2=((var4+var2)/2)
print(round(r1,2))
print(round(r2,2))

-- EXECUTION TIME:
0.140517
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.75
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.33
3.44
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:55:04) 
-- CODE:
xa=float(input(""))
ya=float(input(""))
xb=float(input(""))
yb=float(input(""))
r1=((xa+xb)/2)
r2=((ya+yb)/2)
print(round(r1,2))
print(round(r2,2))

-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 00:55:42) 
-- CODE:
xa=float(input(""))
ya=float(input(""))
xb=float(input(""))
yb=float(input(""))
r1=((xa+xb)/2)
r2=((ya+yb)/2)
print(round(r1,1))
print(round(r2,1))

-- OUTPUT:
40.0
36.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 00:55:57) 
-- CODE:
xa=float(input(""))
ya=float(input(""))
xb=float(input(""))
yb=float(input(""))
r1=((xa+xb)/2)
r2=((ya+yb)/2)
print(round(r1,1))
print(round(r2,1))

-- EXECUTION TIME:
0.149803
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
40.0
36.5
---- user output:
40.0
36.5
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
3.8
2.4
---- user output:
3.8
2.4
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
2.3
3.4
---- user output:
2.3
3.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
